--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<title>ReactJS Tutorial</title>
 </head>
 <body>
-	<div></div>
+	<div id="main"></div>
+	<script src="/app/bundle.js"></script>
 </body>
 </html>
