--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>ReactJS Tutorial</title>
-<<<<<<< HEAD
-	<link rel="stylesheet" type="text/css" href="http://semantic-ui.com/dist/semantic.min.css">
-=======
->>>>>>> e71e5b7c7249d914c1a527c2d2d32641fb81c671
+	<link rel="stylesheet" type="text/css" href="app/index.css">
 </head>
 <body>
 	<div id="main"></div>
