--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>ReactJS Tutorial</title>
 	<link rel="stylesheet" type="text/css" href="app/index.css">
+	<link rel="stylesheet" type="text/css" href="http://semantic-ui.com/dist/semantic.min.css">
 </head>
 <body>
 	<div id="main"></div>
